--- a/offers.html
+++ b/offers.html
@@ -80,8 +80,7 @@
 	<!--  -->
 	<section id="section1"> 
 		<form id="regForm" name="regForm" method="post"></form> <!--action="mas_reg2.html"-->
-			  <h1>MAS22 Registration Form</h1>
-
+			  <h1>Book Your Flight!</h1>
 
 			  <fieldset id="contactInfo">
 					<label for="fnBox">First Name*</label>
@@ -89,9 +88,6 @@
 
 					<label for="lnBox">Last Name*</label>
 					<input name="lastName" id="lnBox" type="text" required />
-
-					<label for="groupBox">Company or University</label>
-					<input name="group" id="groupBox" type="text" />
 
 					<label for="mailBox">E-mail*</label>
 					<input name="email" id="mailBox" type="email" required />
@@ -103,20 +99,20 @@
 			  </fieldset>
 
 			  <fieldset id="confChoices">
-					<label for="sessionBox">Session Packs</label>
+					<label for="sessionBox">Flights</label>
 					<select id="sessionBox" name="sessionOption" size="5" required>
-						  <option value="95">Exhibits Only ($95)</option>
-						  <option value="215">3 Session Pack ($215)</option>
-						  <option value="420">6 Session Pack ($420)</option>
-						  <option value="595">Session Pass ($595)</option>
-						  <option value="845">VIP Pass ($845)</option>
+						  <option value="45">Southwest Flights ($45)</option>
+						  <option value="65">Northwest Flights ($65)</option>
+						  <option value="90">Midwest Flights ($90)</option>
+						  <option value="120">Southeast Flights ($120)</option>
+						  <option value="145">Northeast Flights ($145)</option>
 					</select>
-					<label for="banquet">MAS22 Banquet ($55 ea.)</label>
+					<label for="banquet">Luggage Cost ($25 ea.)</label>
 					<input type="number" min="0" max="10" id="banquetBox" name="banquetGuests" /><span>
 						  attendees</span>
 
-					<label for="mediaPack">MAS22 Media Pack ($115)</label>
-					<input type="checkbox" name="mediaPack" id="mediaCB" value="115" />
+					<label for="mediaPack">First Class ($15)</label>
+					<input type="checkbox" name="mediaPack" id="mediaCB" value="15" />
 
 			  </fieldset>
 			  <input id="regSubmit" type="submit" value="continue" />
@@ -129,10 +125,6 @@
 			  <tr>
 					<th>Name</th>
 					<td><span id="regName"></span></td>
-			  </tr>
-			  <tr>
-					<th>Company</th>
-					<td><span id="regGroup"></span></td>
 			  </tr>
 			  <tr>
 					<th>E-mail</th>
@@ -161,48 +153,52 @@
 		</table>
   </aside>
 
-	<footer>
-		<div class="container">
-			<!-- row 1 -->
-			<div class="row">
-				<!-- column 1 -->
-				<div class="col-lg-4">
-					<!-- Info -->
-					<div class="info">
-						<div class="footerTitle">
-							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
-							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
-							soluta quos!
+  <footer>
+	<div class="container">
+		<!-- row 1 -->
+		<div class="row">
+			<!-- column 1 -->
+			<div class="col-lg-4">
+				<!-- Info -->
+				<div class="info">
+					<div class="footerTitle">
+						uhhhhhhhh
 						</div>
-					</div>
+						Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
+						eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
+						soluta quos!
 				</div>
-				<!-- column 2 -->
-				<div class="col-lg-4">
-					<!-- Phone Number/Basic Info -->
-					<div class="Phone">
-						<div class="footerTitle">
-							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
-							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
-							soluta quos!
-						</div>
+			</div>
+			<!-- column 2 -->
+			<div class="col-lg-4">
+				<!-- Phone Number/Basic Info -->
+				<div class="Phone">
+					<div class="footerTitle">
+					Nu Phuong	
 					</div>
+						Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
+						eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
+						soluta quos!
 				</div>
-				<!-- column 3 -->
-				<div class="col-lg-4">
-					<!-- Social Medias -->
-					<div class="socials">
-						<div class="footerTitle">
-							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
-							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
-							soluta quos!
-						</div>
+			</div>
+			<!-- column 3 -->
+			<div class="col-lg-4">
+				<!-- Social Medias -->
+				<div class="socials">
+					<div class="footerTitle">
+					gravy
 					</div>
+						Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
+						eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
+						soluta quos!
 				</div>
 			</div>
 		</div>
-	</footer>
+	</div>
+</footer>
 
 	<script src="app.js"></script>
+	<script src="form.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
 	</script>
