--- a/contact.html
+++ b/contact.html
@@ -87,10 +87,11 @@
 					<!-- Info -->
 					<div class="info">
 						<div class="footerTitle">
+							uhhhhhhhh
+							</div>
 							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
 							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
 							soluta quos!
-						</div>
 					</div>
 				</div>
 				<!-- column 2 -->
@@ -98,10 +99,11 @@
 					<!-- Phone Number/Basic Info -->
 					<div class="Phone">
 						<div class="footerTitle">
+						Nu Phuong	
+						</div>
 							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
 							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
 							soluta quos!
-						</div>
 					</div>
 				</div>
 				<!-- column 3 -->
@@ -109,10 +111,11 @@
 					<!-- Social Medias -->
 					<div class="socials">
 						<div class="footerTitle">
+						gravy
+						</div>
 							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
 							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
 							soluta quos!
-						</div>
 					</div>
 				</div>
 			</div>
