Footer styles and newsletter

--- a/index.html
+++ b/index.html
@@ -50,15 +50,6 @@
 			<li class="main_nav_item">
 				<div class="section">
 					<div class="section__item">
-						<a href="contact.html" class="sm-link sm-link_padding sm-link1">
-							<span class="sm-link__label">Contact</span>
-						</a>
-					</div>
-				</div>
-			</li>
-			<li class="main_nav_item">
-				<div class="section">
-					<div class="section__item">
 						<a href="about.html" class="sm-link sm-link_padding sm-link1">
 							<span class="sm-link__label">About Us</span>
 						</a>
@@ -73,8 +64,8 @@
             <div class="home_background"></div>
             <div class="slogan_content">
                 <div class="slogan_content_inner" id="slogan_content_inner">
-                    <div class="slogan_text_large">Easy Breezy</div>
-                    <div class="slogan_text_small">Zephyr Airlines</div>
+                    <div class="slogan_text_large">AIR<br>LINES</div>
+                    <div class="slogan_text_small">ZEPHYR</div>
                 </div>
             </div>
 	</div>
@@ -128,12 +119,12 @@
 				<div class="col-lg-4">
 					<!-- Info -->
 					<div class="info">
-						<div class="footerTitle">
-							uhhhhhhhh
-							</div>
-							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
-							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
-							soluta quos!
+						<div class="footerTitle">Contact</div>
+							<p>Street:63 Wisteria PL</p>
+							<p>City:Millbrook</p>
+							<p>State:Alabama</p>
+							<p>ZipCode:36054</p>
+							<p>Number:(850)-563-6262</p>
 					</div>
 				</div>
 				<!-- column 2 -->
@@ -141,7 +132,7 @@
 					<!-- Phone Number/Basic Info -->
 					<div class="Phone">
 						<div class="footerTitle">
-						Nu Phuong	
+							Site Information
 						</div>
 							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
 							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
@@ -150,14 +141,13 @@
 				</div>
 				<!-- column 3 -->
 				<div class="col-lg-4">
+						<h3>News Letter</h3>
+						<input type="email" id="newsLetterFooter" class="newsFooter">
+						<input type="button" value="Sign Up" class="newsFooter" id="newsFooterButton">
 					<!-- Social Medias -->
 					<div class="socials">
-						<div class="footerTitle">
-						gravy
-						</div>
-							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
-							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
-							soluta quos!
+						
+
 					</div>
 				</div>
 			</div>
