--- a/index.html
+++ b/index.html
@@ -81,27 +81,7 @@
 			</p>
 		</div>
 	</div>
-	<table class="table table-hover table-inverse table-responsive">
-		<thead class="thead-inverse">
-			<tr>
-				<th>hello</th>
-				<th>hello</th>
-				<th>hello</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td scope="row"></td>
-				<td>hello</td>
-				<td>hello</td>
-			</tr>
-			<tr>
-				<td scope="row"></td>
-				<td>hello</td>
-				<td>hello</td>
-			</tr>
-		</tbody>
-	</table>
+	
 
 	<!-- Search Bar  -->
 
@@ -119,7 +99,7 @@
 				<div class="col-lg-4">
 					<!-- Info -->
 					<div class="info">
-						<div class="footerTitle">Contact</div>
+						<div class="footerTitle">Find Us</div>
 							<p>Street:63 Wisteria PL</p>
 							<p>City:Millbrook</p>
 							<p>State:Alabama</p>
@@ -134,9 +114,12 @@
 						<div class="footerTitle">
 							Site Information
 						</div>
-							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
-							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
-							soluta quos!
+						<p><a href="#">Accessibility</a></p>
+						<p><a href="#">Terms and Conditions</a></p>
+						<p><a href="#">Privacy Notices</a></p>
+						<p><a href="#">Cookie Policy</a></p>
+						<p><a href="#">Fraud and Scam Alert</a></p>
+						<p><a href="contact.html">Contact Us</a></p>
 					</div>
 				</div>
 				<!-- column 3 -->
@@ -146,7 +129,7 @@
 						<input type="button" value="Sign Up" class="newsFooter" id="newsFooterButton">
 					<!-- Social Medias -->
 					<div class="socials">
-						
+						<img src="faceIcon.png" alt="">
 
 					</div>
 				</div>
