--- a/index.html
+++ b/index.html
@@ -128,8 +128,11 @@
 						<input type="email" id="newsLetterFooter" class="newsFooter">
 						<input type="button" value="Sign Up" class="newsFooter" id="newsFooterButton">
 					<!-- Social Medias -->
+					<p id="newsLetterText">
+						Sign up for offers and different discounts and updates.
+					</p>
 					<div class="socials">
-						<img src="faceIcon.png" alt="">
+						<!-- <img src="faceIcon.png" alt="" id="faceBook"> -->
 
 					</div>
 				</div>
