--- a/index.html
+++ b/index.html
@@ -70,14 +70,13 @@
             </div>
 	</div>
 
-	<div class="jumbotron jumbotron-fluid">
+	<div class="jumbotron jumbotron-fluid easyBreezy">
 		<div class="container">
 			<h1 class="display-3">Zephyr Airlines</h1>
 			<p class="lead">Easy... Breezy</p>
 			<hr class="my-2">
-			<p>More info</p>
 			<p class="lead">
-				<a class="btn btn-primary btn-lg" href="" role="button">Jumbo action name</a>
+				<a class="btn btn-primary btn-lg" href="" role="button">More Info</a>
 			</p>
 		</div>
 	</div>
