--- a/news.html
+++ b/news.html
@@ -86,12 +86,12 @@
 				<div class="col-lg-4">
 					<!-- Info -->
 					<div class="info">
-						<div class="footerTitle">
-							uhhhhhhhh
-							</div>
-							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
-							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
-							soluta quos!
+						<div class="footerTitle">Find Us</div>
+							<p>Street:63 Wisteria PL</p>
+							<p>City:Millbrook</p>
+							<p>State:Alabama</p>
+							<p>ZipCode:36054</p>
+							<p>Number:(850)-563-6262</p>
 					</div>
 				</div>
 				<!-- column 2 -->
@@ -99,23 +99,28 @@
 					<!-- Phone Number/Basic Info -->
 					<div class="Phone">
 						<div class="footerTitle">
-						Nu Phuong	
+							Site Information
 						</div>
-							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
-							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
-							soluta quos!
+						<p><a href="#">Accessibility</a></p>
+						<p><a href="#">Terms and Conditions</a></p>
+						<p><a href="#">Privacy Notices</a></p>
+						<p><a href="#">Cookie Policy</a></p>
+						<p><a href="#">Fraud and Scam Alert</a></p>
+						<p><a href="contact.html">Contact Us</a></p>
 					</div>
 				</div>
 				<!-- column 3 -->
 				<div class="col-lg-4">
+						<h3>News Letter</h3>
+						<input type="email" id="newsLetterFooter" class="newsFooter">
+						<input type="button" value="Sign Up" class="newsFooter" id="newsFooterButton">
 					<!-- Social Medias -->
+					<p id="newsLetterText">
+						Sign up for offers and different discounts and updates.
+					</p>
 					<div class="socials">
-						<div class="footerTitle">
-						gravy
-						</div>
-							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
-							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
-							soluta quos!
+						<!-- <img src="faceIcon.png" alt="" id="faceBook"> -->
+
 					</div>
 				</div>
 			</div>
