--- a/offers.html
+++ b/offers.html
@@ -50,15 +50,6 @@
 				<li class="main_nav_item">
 					<div class="section">
 						<div class="section__item">
-							<a href="contact.html" class="sm-link sm-link_padding sm-link1">
-								<span class="sm-link__label">Contact</span>
-							</a>
-						</div>
-					</div>
-				</li>
-				<li class="main_nav_item">
-					<div class="section">
-						<div class="section__item">
 							<a href="about.html" class="sm-link sm-link_padding sm-link1">
 								<span class="sm-link__label">About Us</span>
 							</a>
@@ -79,7 +70,7 @@
 	</div>
 	<!--  -->
 	<section id="section1"> 
-		<form id="regForm" name="regForm" method="post"></form> <!--action="mas_reg2.html"-->
+		<form id="regForm" name="regForm" method="post" action="offers2.html"></form>
 			  <h1>Check Availability!</h1>
 
 			  <fieldset id="contactInfo">
