--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	<div class="jumbotron jumbotron-fluid easyBreezy">
 		<div class="container">
 			<h1 class="display-3">Zephyr Airlines</h1>
-			<p class="lead">Easy... Breezy</p>
+			<p class="lead">Where every flight... is Easy Breezy</p>
 			<hr class="my-2">
 			<p class="lead">
 				<a class="btn btn-primary btn-lg" href="" role="button">More Info</a>
