--- a/offers.html
+++ b/offers.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Offers</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<title>Offers</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<!-- <link rel="stylesheet" href="app.css" /> -->
-		<link rel="stylesheet" href="offers.css">
+	<link rel="stylesheet" href="app.css" />
+	<link rel="stylesheet" href="offers.css">
 
 </head>
 
@@ -60,45 +60,61 @@
 		</nav>
 	</header>
 	<div class="home">
-            <div class="home_background"></div>
-            <div class="slogan_content">
-                <div class="slogan_content_inner" id="slogan_content_inner">
-                    <div class="slogan_text_large">ZEPHYR</div>
-                    <div class="slogan_text_small">OFFERS</div>
-                </div>
-            </div>
+		<div class="home_background"></div>
+		<div class="slogan_content">
+			<div class="slogan_content_inner" id="slogan_content_inner">
+				<div class="slogan_text_large">ZEPHYR</div>
+				<div class="slogan_text_small">OFFERS</div>
+			</div>
+		</div>
 	</div>
 	<!--  -->
-	<section id="section1"> 
-		<form id="regForm" name="regForm" method="post" action="offers2.html"></form>
-			  <h1>Check Availability!</h1>
+	<section id="section1">
+		<form id="regForm" name="regForm" method="post"></form>
+		<!--action="mas_reg2.html"-->
+		<h1>Check Availability!</h1>
 
-			  <fieldset id="contactInfo">
-					<label for="fnBox">First Name*</label>
-					<input name="firstName" id="fnBox" type="text" required />
+		<fieldset id="offersForm">
+			<div class="formHalf">
+					<div class="">
+							<label for="destBox">From</label>
+							<input name="dest" id="destBox" type="text" required placeholder="Type in your destination"
+								class="offersFormInput" />
+					</div>
+				<div class="">
+						<label for="destBox">Destination*</label>
+						<input name="dest" id="destBox" type="text" required placeholder="Type in your destination"
+							class="offersFormInput" />
+				</div>
 
-					<label for="lnBox">Last Name*</label>
-					<input name="lastName" id="lnBox" type="text" required />
-
-					<label for="fromBox">From*</label>
-					<input name="from" id="fromBox" type="text" required placeholder="Type where you come from"/>
-
-					<label for="destBox">Destination*</label>
-					<input name="dest" id="destBox" type="text" required placeholder="Type in your destination" />
-
-					<label for="firstDateBox">Departure Date</label>
-					<input type="date" name="firstDate" id="firstDateBox">
-					
-					<label for="lastDateBox">Arrival Date</label>
-					<input type="date" name="lastDate" id="lastDateBox">
-			  </fieldset>
-
-
-			  <input id="regSubmit" type="submit" value="continue" />
+				<div class="">
+						<label for="firstDateBox">Departure Date</label>
+						<input type="date" name="firstDate" id="firstDateBox" class="offersFormInput">
+		
+				</div>
+				<div class="">
+						<label for="lastDateBox">Arrival Date</label>
+						<input type="date" name="lastDate" id="lastDateBox" class="offersFormInput">
+				</div>
+			</div>
+			<!-- <div class="formThird"> -->
+					<!-- <div class="">
+							<p>Children(0-17)</p>	
+							<select name="childrenAmount" id="">
+									<option value="1">1</option>
+									<option value="2">2</option>
+									<option value="3">3</option>
+							</select>
+					</div> -->
+			<!-- </div> -->
+			<div class="offersFormButton">
+					<input id="regSubmit" type="submit" value="continue" class="offersFormInput" >
+			</div>
+		</fieldset>\
 		</form>
-  </section>
-
-  <!-- <aside id="reg1Aside">
+	</section>
+	
+	<!-- <aside id="reg1Aside">
 		<table>
 			  <caption>Shopping Cart</caption>
 			  <tr>
@@ -136,54 +152,54 @@
 		</table>
   </aside> -->
 
-  <footer>
-	<div class="container">
-		<!-- row 1 -->
-		<div class="row">
-			<!-- column 1 -->
-			<div class="col-lg-4">
-				<!-- Info -->
-				<div class="info">
-					<div class="footerTitle">Find Us</div>
+	<footer>
+		<div class="container">
+			<!-- row 1 -->
+			<div class="row">
+				<!-- column 1 -->
+				<div class="col-lg-4">
+					<!-- Info -->
+					<div class="info">
+						<div class="footerTitle">Find Us</div>
 						<p>Street:63 Wisteria PL</p>
 						<p>City:Millbrook</p>
 						<p>State:Alabama</p>
 						<p>ZipCode:36054</p>
 						<p>Number:(850)-563-6262</p>
-				</div>
-			</div>
-			<!-- column 2 -->
-			<div class="col-lg-4">
-				<!-- Phone Number/Basic Info -->
-				<div class="Phone">
-					<div class="footerTitle">
-						Site Information
 					</div>
-					<p><a href="#">Accessibility</a></p>
-					<p><a href="#">Terms and Conditions</a></p>
-					<p><a href="#">Privacy Notices</a></p>
-					<p><a href="#">Cookie Policy</a></p>
-					<p><a href="#">Fraud and Scam Alert</a></p>
-					<p><a href="contact.html">Contact Us</a></p>
 				</div>
-			</div>
-			<!-- column 3 -->
-			<div class="col-lg-4">
+				<!-- column 2 -->
+				<div class="col-lg-4">
+					<!-- Phone Number/Basic Info -->
+					<div class="Phone">
+						<div class="footerTitle">
+							Site Information
+						</div>
+						<p><a href="#">Accessibility</a></p>
+						<p><a href="#">Terms and Conditions</a></p>
+						<p><a href="#">Privacy Notices</a></p>
+						<p><a href="#">Cookie Policy</a></p>
+						<p><a href="#">Fraud and Scam Alert</a></p>
+						<p><a href="contact.html">Contact Us</a></p>
+					</div>
+				</div>
+				<!-- column 3 -->
+				<div class="col-lg-4">
 					<h3>News Letter</h3>
 					<input type="email" id="newsLetterFooter" class="newsFooter">
 					<input type="button" value="Sign Up" class="newsFooter" id="newsFooterButton">
-				<!-- Social Medias -->
-				<p id="newsLetterText">
-					Sign up for offers and different discounts and updates.
-				</p>
-				<div class="socials">
-					<!-- <img src="faceIcon.png" alt="" id="faceBook"> -->
+					<!-- Social Medias -->
+					<p id="newsLetterText">
+						Sign up for offers and different discounts and updates.
+					</p>
+					<div class="socials">
+						<!-- <img src="faceIcon.png" alt="" id="faceBook"> -->
 
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-</footer>
+	</footer>
 
 	<!-- <script src="app.js"></script> -->
 	<script src="form.js"></script>
