quality of life changes
removed and made spelling better

--- a/offers.html
+++ b/offers.html
@@ -110,7 +110,7 @@
 			<div class="offersFormButton">
 					<input id="regSubmit" type="submit" value="continue" class="offersFormInput" >
 			</div>
-		</fieldset>\
+		</fieldset>
 		</form>
 	</section>
 	
