--- a/offers.html
+++ b/offers.html
@@ -108,7 +108,7 @@
 					</div> -->
 			<!-- </div> -->
 			<div class="offersFormButton">
-					<input id="regSubmit" type="submit" value="continue" class="offersFormInput" >
+					<input id="regSubmit" type="submit" value="Show Flights" class="offersFormInput" >
 			</div>
 		</fieldset>
 		</form>
