--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 							<p>City:Millbrook</p>
 							<p>State:Alabama</p>
 							<p>ZipCode:36054</p>
-							<p>Number:(850)-563-6262</p>
+							<p>Number:<a href="tel:8505636262">(850)-563-6262</a></p>
 					</div>
 				</div>
 				<!-- column 2 -->
@@ -118,7 +118,7 @@
 						<p><a href="#">Privacy Notices</a></p>
 						<p><a href="#">Cookie Policy</a></p>
 						<p><a href="#">Fraud and Scam Alert</a></p>
-						<p><a href="contact.html">Contact Us</a></p>
+						<p><a href="#">Contact Us</a></p>
 					</div>
 				</div>
 				<!-- column 3 -->
