Search bar on every page
Added the search bar to the corner if every page

--- a/about.html
+++ b/about.html
@@ -69,6 +69,14 @@
 		</div>
 	</div>
 
+		<!-- Search Bar  -->
+
+		<form id="content">
+			<input type="text" name="input" class="input" id="search-input">
+			<button type="reset" class="search" id="search-btn"></button>
+		</form>
+		<!--  -->
+
 	<footer>
 		<div class="container">
 			<!-- row 1 -->
@@ -118,7 +126,7 @@
 		</div>
 	</footer>
 
-	<!-- <script src="app.js"></script> -->
+	<script src="app.js"></script>
 	<!-- <script src="request.js"></script> -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
