--- a/index.html
+++ b/index.html
@@ -56,7 +56,28 @@
 					</div>
 				</div>
 			</li>
+			<div class="nav-subclass">
+				<li class="main_nav_item">
+				<div class="section">
+					<div class="section__item">
+						<a href="about.html" class="sm-link sm-link_padding sm-link1">
+							<span class="sm-link__label">Sign Up</span>
+						</a>
+					</div>
+				</div>
+			</li>
+			<li class="main_nav_item">
+				<div class="section">
+					<div class="section__item">
+						<a href="about.html" class="sm-link sm-link_padding sm-link1">
+							<span class="sm-link__label">Sign In</span>
+						</a>
+					</div>
+				</div>
+			</li>
+			</div>
 		</ul>
+		
 	</nav>
 	</header>
 
