--- a/news.html
+++ b/news.html
@@ -27,21 +27,41 @@
 							</a>
 						</div>
 					</div>
-				</li>
+				</div>
+			</li>
+			<li class="main_nav_item">
+				<div class="section">
+					<div class="section__item">
+						<a href="offers.html" class="sm-link sm-link_padding sm-link1">
+							<span class="sm-link__label">Offers</span>
+						</a>
+					</div>
+				</div>
+			</li>
+			<li class="main_nav_item active">
+				<div class="section">
+					<div class="section__item">
+						<a href="news.html" class="sm-link sm-link_padding sm-link1">
+							<span class="sm-link__label">News</span>
+						</a>
+					</div>
+				</div>
+			</li>
+			<li class="main_nav_item">
+				<div class="section">
+					<div class="section__item">
+						<a href="about.html" class="sm-link sm-link_padding sm-link1">
+							<span class="sm-link__label">About Us</span>
+						</a>
+					</div>
+				</div>
+			</li>
+			<div class="nav-subclass">
 				<li class="main_nav_item">
 					<div class="section">
 						<div class="section__item">
-							<a href="offers.html" class="sm-link sm-link_padding sm-link1">
-								<span class="sm-link__label">Offers</span>
-							</a>
-						</div>
-					</div>
-				</li>
-				<li class="main_nav_item active">
-					<div class="section">
-						<div class="section__item">
-							<a href="news.html" class="sm-link sm-link_padding sm-link1">
-								<span class="sm-link__label">News</span>
+							<a href="about.html" class="sm-link sm-link_padding sm-link1">
+								<span class="sm-link__label">Sign Up</span>
 							</a>
 						</div>
 					</div>
@@ -50,12 +70,13 @@
 					<div class="section">
 						<div class="section__item">
 							<a href="about.html" class="sm-link sm-link_padding sm-link1">
-								<span class="sm-link__label">About Us</span>
+								<span class="sm-link__label">Sign In</span>
 							</a>
 						</div>
 					</div>
 				</li>
-			</ul>
+			</div>
+		</ul>
 		</nav>
 	</header>
 
