--- a/about.html
+++ b/about.html
@@ -27,44 +27,65 @@
 							</a>
 						</div>
 					</div>
-				</li>
+				</div>
+			</li>
+			<li class="main_nav_item">
+				<div class="section">
+					<div class="section__item">
+						<a href="offers.html" class="sm-link sm-link_padding sm-link1">
+							<span class="sm-link__label">Offers</span>
+						</a>
+					</div>
+				</div>
+			</li>
+			<li class="main_nav_item">
+				<div class="section">
+					<div class="section__item">
+						<a href="news.html" class="sm-link sm-link_padding sm-link1">
+							<span class="sm-link__label">News</span>
+						</a>
+					</div>
+				</div>
+			</li>
+			<li class="main_nav_item active">
+				<div class="section">
+					<div class="section__item">
+						<a href="about.html" class="sm-link sm-link_padding sm-link1">
+							<span class="sm-link__label">About Us</span>
+						</a>
+					</div>
+				</div>
+			</li>
+			<div class="nav-subclass">
 				<li class="main_nav_item">
-					<div class="section">
-						<div class="section__item">
-							<a href="offers.html" class="sm-link sm-link_padding sm-link1">
-								<span class="sm-link__label">Offers</span>
-							</a>
-						</div>
+				<div class="section">
+					<div class="section__item">
+						<a href="about.html" class="sm-link sm-link_padding sm-link1">
+							<span class="sm-link__label">Sign Up</span>
+						</a>
 					</div>
-				</li>
-				<li class="main_nav_item">
-					<div class="section">
-						<div class="section__item">
-							<a href="news.html" class="sm-link sm-link_padding sm-link1">
-								<span class="sm-link__label">News</span>
-							</a>
-						</div>
+				</div>
+			</li>
+			<li class="main_nav_item">
+				<div class="section">
+					<div class="section__item">
+						<a href="about.html" class="sm-link sm-link_padding sm-link1">
+							<span class="sm-link__label">Sign In</span>
+						</a>
 					</div>
-				</li>
-				<li class="main_nav_item active">
-					<div class="section">
-						<div class="section__item">
-							<a href="about.html" class="sm-link sm-link_padding sm-link1">
-								<span class="sm-link__label">About Us</span>
-							</a>
-						</div>
-					</div>
-				</li>
-			</ul>
+				</div>
+			</li>
+			</div>
+		</ul>
 		</nav>
 	</header>
 
 	<div class="home">
-		<div class="home_background" style="background-image:url(background_2.jpg)"></div>
+		<div class="home_background" style="background-image:url(about_us_background.jpg)"></div>
 		<div class="slogan_content">
 			<div class="slogan_content_inner" id="slogan_content_inner">
-				<div class="slogan_text_large">Easy Breezy</div>
-				<div class="slogan_text_small">Zephyr Airlines</div>
+				<div class="slogan_text_large">Zephyr</div>
+				<div class="slogan_text_small">Info</div>
 			</div>
 		</div>
 	</div>
