--- a/news.html
+++ b/news.html
@@ -81,11 +81,11 @@
 	</header>
 
 	<div class="home">
-            <div class="home_background"></div>
+		<div class="home_background" style="background-image:url(news_background.jpg)"></div>
             <div class="slogan_content">
                 <div class="slogan_content_inner" id="slogan_content_inner">
-                    <div class="slogan_text_large">Easy Breezy</div>
-                    <div class="slogan_text_small">Zephyr Airlines</div>
+                    <div class="slogan_text_large">ZEPHYR</div>
+                    <div class="slogan_text_small">News</div>
                 </div>
             </div>
 	</div>
