--- a/offers.html
+++ b/offers.html
@@ -118,17 +118,27 @@
 						<input type="date" name="lastDate" id="lastDateBox" class="offersFormInput">
 				</div>
 			</div>
-			<!-- <div class="formThird"> -->
-					<!-- <div class="">
-							<p>Children(0-17)</p>	
-							<select name="childrenAmount" id="">
-									<option value="1">1</option>
-									<option value="2">2</option>
-									<option value="3">3</option>
-							</select>
-					</div> -->
-			<!-- </div> -->
-			<div class="offersFormButton">
+			<div class="formThird">
+				<div>
+					<p>Children(0-17)</p>	
+					<select name="childrenAmount" id="">
+							<option value="1">1</option>
+							<option value="2">2</option>
+							<option value="3">3</option>
+					</select>
+				</div>
+				<div>
+					<p>Adults(18+)</p>	
+					<select name="adultAmount" id="">
+							<option value="1">1</option>
+							<option value="2">2</option>
+							<option value="3">3</option>
+					</select>
+				</div>
+			</div>
+		</div>
+		
+		<div class="offersFormButton">
 					<input id="regSubmit" type="submit" value="Show Flights" class="offersFormInput" >
 			</div>
 		</fieldset>
